# mfaktc-windev

./: .gitignore
.github/workflows/: build.yml  win-workflow-test.yml
.github/workflows/scripts/: build_helper.sh  gather_info.sh  patch_makefile.sh  setup_cuda.ps1  vcwrapper.sh
src/: CMakeLists.txt  Makefile  Makefile.win  gpusieve.cu  mfaktc.c  params.h  tf_96bit_helper.cu  tf_barrett96_core.cu  tf_barrett96_gs.cu  tf_common.cu  vcwrapper.sh
